// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hamburger > should render with active styles when passed the isActive prop 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  border: 0;
  padding: 12px;
}

.circuit-1 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

.circuit-2 {
  display: inline-block;
  line-height: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  width: 24px;
  height: 24px;
}

.circuit-3 {
  top: 50%;
  width: 22px;
  -webkit-transform: rotate(225deg);
  -moz-transform: rotate(225deg);
  -ms-transform: rotate(225deg);
  transform: rotate(225deg);
}

.circuit-3,
.circuit-3::after,
.circuit-3::before {
  background-color: currentColor;
  border-radius: 1px;
  display: block;
  height: 2px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,-webkit-transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.circuit-3::before,
.circuit-3::after {
  top: 0;
  content: '';
}

.circuit-3::before {
  -webkit-transform: translateY(-7px);
  -moz-transform: translateY(-7px);
  -ms-transform: translateY(-7px);
  transform: translateY(-7px);
  width: calc(22px * 0.64);
}

.circuit-3::after {
  -webkit-transform: translateY(7px);
  -moz-transform: translateY(7px);
  -ms-transform: translateY(7px);
  transform: translateY(7px);
  width: calc(22px * 0.82);
}

.circuit-3,
.circuit-3::before,
.circuit-3::after {
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-out 0.15s,-webkit-transform 0.3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.15s;
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-out 0.15s,transform 0.3s cubic-bezier(0.215, 0.61, 0.355, 1) 0.15s;
  width: 22px;
}

.circuit-3::before {
  opacity: 0;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.circuit-3::after {
  -webkit-transform: translateY(0) rotate(-90deg);
  -moz-transform: translateY(0) rotate(-90deg);
  -ms-transform: translateY(0) rotate(-90deg);
  transform: translateY(0) rotate(-90deg);
}

<button
  class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a circuit-0"
  title="Close menu"
  type="button"
>
  <span
    class="_spinner_892426 circuit-1"
  >
    <span
      class="_hide-visually_73b4bb"
    />
  </span>
  <span
    class="_content_892426"
  >
    <span
      aria-hidden="true"
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="_hide-visually_73b4bb"
    >
      Close menu
    </span>
  </span>
</button>
`;

exports[`Hamburger > should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  border: 0;
  padding: 12px;
}

.circuit-1 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

.circuit-2 {
  display: inline-block;
  line-height: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  width: 24px;
  height: 24px;
}

.circuit-3 {
  top: 50%;
  width: 22px;
}

.circuit-3,
.circuit-3::after,
.circuit-3::before {
  background-color: currentColor;
  border-radius: 1px;
  display: block;
  height: 2px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,-webkit-transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.circuit-3::before,
.circuit-3::after {
  top: 0;
  content: '';
}

.circuit-3::before {
  -webkit-transform: translateY(-7px);
  -moz-transform: translateY(-7px);
  -ms-transform: translateY(-7px);
  transform: translateY(-7px);
  width: calc(22px * 0.64);
}

.circuit-3::after {
  -webkit-transform: translateY(7px);
  -moz-transform: translateY(7px);
  -ms-transform: translateY(7px);
  transform: translateY(7px);
  width: calc(22px * 0.82);
}

<button
  class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a circuit-0"
  title="Open menu"
  type="button"
>
  <span
    class="_spinner_892426 circuit-1"
  >
    <span
      class="_hide-visually_73b4bb"
    />
  </span>
  <span
    class="_content_892426"
  >
    <span
      aria-hidden="true"
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="_hide-visually_73b4bb"
    >
      Open menu
    </span>
  </span>
</button>
`;

exports[`Hamburger > should render with giga styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  border: 0;
  padding: 12px;
}

.circuit-1 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

.circuit-2 {
  display: inline-block;
  line-height: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  width: 24px;
  height: 24px;
}

.circuit-3 {
  top: 50%;
  width: 22px;
}

.circuit-3,
.circuit-3::after,
.circuit-3::before {
  background-color: currentColor;
  border-radius: 1px;
  display: block;
  height: 2px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,-webkit-transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.circuit-3::before,
.circuit-3::after {
  top: 0;
  content: '';
}

.circuit-3::before {
  -webkit-transform: translateY(-7px);
  -moz-transform: translateY(-7px);
  -ms-transform: translateY(-7px);
  transform: translateY(-7px);
  width: calc(22px * 0.64);
}

.circuit-3::after {
  -webkit-transform: translateY(7px);
  -moz-transform: translateY(7px);
  -ms-transform: translateY(7px);
  transform: translateY(7px);
  width: calc(22px * 0.82);
}

<button
  class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a circuit-0"
  title="Open menu"
  type="button"
>
  <span
    class="_spinner_892426 circuit-1"
  >
    <span
      class="_hide-visually_73b4bb"
    />
  </span>
  <span
    class="_content_892426"
  >
    <span
      aria-hidden="true"
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="_hide-visually_73b4bb"
    >
      Open menu
    </span>
  </span>
</button>
`;

exports[`Hamburger > should render with kilo styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  border: 0;
  padding: 8px;
}

.circuit-1 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
}

.circuit-2 {
  display: inline-block;
  line-height: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-1px);
  -moz-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  width: 16px;
  height: 16px;
}

.circuit-3 {
  top: 50%;
  width: 14px;
}

.circuit-3,
.circuit-3::after,
.circuit-3::before {
  background-color: currentColor;
  border-radius: 1px;
  display: block;
  height: 2px;
  position: absolute;
  -webkit-transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,-webkit-transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
  transition: width 0.2s ease-out 0.15s,opacity 0.1s ease-in,transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.circuit-3::before,
.circuit-3::after {
  top: 0;
  content: '';
}

.circuit-3::before {
  -webkit-transform: translateY(-5px);
  -moz-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  width: calc(14px * 0.64);
}

.circuit-3::after {
  -webkit-transform: translateY(5px);
  -moz-transform: translateY(5px);
  -ms-transform: translateY(5px);
  transform: translateY(5px);
  width: calc(14px * 0.82);
}

<button
  class="_base_892426 _focus-visible_73b4bb _kilo_892426 _secondary_892426 _kilo_f6dd9a circuit-0"
  title="Open menu"
  type="button"
>
  <span
    class="_spinner_892426 circuit-1"
  >
    <span
      class="_hide-visually_73b4bb"
    />
  </span>
  <span
    class="_content_892426"
  >
    <span
      aria-hidden="true"
      class="circuit-2"
    >
      <span
        class="circuit-3"
      />
    </span>
    <span
      class="_hide-visually_73b4bb"
    >
      Open menu
    </span>
  </span>
</button>
`;
